# jira-mcp

./: Cargo.toml  README.md  justfile
.github/workflows/: build-and-release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  tests.rs  utils.rs
crates/jira-client/: Cargo.toml
crates/jira-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  traits.rs
crates/jira-client/src/api/: boards.rs  issues.rs  mod.rs  projects.rs  users.rs
crates/jira-client/src/api/issues/: comments.rs  core.rs  labels.rs  links.rs  mod.rs  transitions.rs  utils.rs  watchers.rs
crates/jira-client/src/models/: board.rs  issue.rs  mod.rs  project.rs  sprint.rs  user.rs
crates/jira-client/src/utils/: adf.rs  cleaning.rs  mod.rs
crates/jira-mcp/: Cargo.toml
crates/jira-mcp/src/: board_utils.rs  context.rs  lib.rs  main.rs  server.rs
crates/jira-mcp/src/errors/: mod.rs  types.rs
crates/jira-mcp/src/handlers/: error_utils.rs  metadata.rs  mod.rs
crates/jira-mcp/src/handlers/issues/: comments.rs  crud.rs  labels.rs  links.rs
crates/jira-mcp/src/models/inputs/: comments.rs  fields.rs  issues.rs  metadata.rs  mod.rs  users.rs
crates/jira-mcp/src/services/: issue_service.rs
crates/jira-mcp/src/utils/: mod.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: context.rs  errors.rs  lib.rs  main.rs  server.rs
crates/mcp-server/src/errors/: suggestions.rs
crates/mcp-server/src/handlers/: fields.rs  issues.rs  metadata.rs  projects.rs  users.rs
crates/mcp-server/src/handlers/issues/: crud.rs  mod.rs  transitions.rs  watchers.rs
crates/mcp-server/src/models/: inputs.rs  issue_types.rs  mod.rs
crates/mcp-server/src/services/: issue_service.rs  mod.rs
crates/mcp-server/src/utils/: field_processing.rs
