[workspace]
members = [
    "crates/mcp-server",
    "crates/jira-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
schemars = { version = "1", features = ["derive"] }
directories = "5"
toml = "0.8"
once_cell = "1"
async-trait = "0.1"
