[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jira-client = { path = "../jira-client" }
schemars = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
